--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.13.0",
     "dotenv": "^17.2.3",
-    "next": "15.0.2",
+    "next": "^16.0.10",
     "next-sanity": "^11.6.4",
     "paystack": "^2.0.1",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sanity": "^4.13.0",
     "styled-components": "^6.1.19"
   },
@@ -28,8 +28,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
