--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,29 +15,29 @@
     "@ai-sdk/react": "^2.0.117",
     "@clerk/nextjs": "^6.34.3",
     "@sanity/icons": "^3.7.4",
-    "@sanity/image-url": "^1.2.0",
-    "@sanity/vision": "^4.13.0",
+    "@sanity/image-url": "^2.0.2",
+    "@sanity/vision": "^3.99.0",
     "ai": "^5.0.115",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
-    "next": "^16.0.10",
-    "next-sanity": "^11.6.4",
+    "next": "15.2.3",
+    "next-sanity": "^9.12.3",
     "openai": "^6.14.0",
     "paystack": "^2.0.1",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "resend": "^6.6.0",
-    "sanity": "^4.13.0",
+    "sanity": "^3.99.0",
     "styled-components": "^6.1.19",
     "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "eslint": "^9.39.2",
-    "eslint-config-next": "^16.0.10",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
